# A.R.I.S.

./: README.md  aris.db  db.py  models.py  pyproject.toml  report.py  requirements.txt  server.py
apps/slack/: main.py
aris/: main.py
aris/agents/gpu_agent/: agent.py  example.env
aris/apps/internal/: main.py  routes_admin.py  routes_gpu.py
aris/apps/slack/: deps.py  main.py  routes_commands.py  routes_events.py
aris/core/: auth.py  config.py  db.py  events.py  logging.py  notify.py  slack.py
aris/modules/gpu/: models.py  repo.py  schemas.py  service.py  views.py
gpu_tracker_demo/: collector.py  scheduler.py
modules/gpu/gpu_tracker/: config.py
static/: index.html
