[project]
name = "aris"
version = "0.1.0"
description = "Aetherial Resource Intelligence System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "slack-sdk>=3.37.0",
    "sqlalchemy>=2.0.44",
]
